<resources>
    <string name="app_name">Do_it</string>
    <string name="task">Tasks</string>
    <string name="todo">TODO</string>
    <string name="new_task">New Task</string>
    <string name="save">save</string>
    <string name="logo">logo</string>
    <string name="task_title">Task Title</string>
    <string name="enter_task_title">Enter Task title</string>
    <string name="what_is_to_be_done">What is to be done?</string>
    <string name="enter_your_task">Detail your Task</string>
    <string name="set_reminder_date_and_time">Set reminder date and time</string>
    <string name="set_date">Set Date</string>
    <string name="save_task">SAVE TASK</string>
    <string name="set_time">Set Time</string>
    <string name="category">Category</string>
    <string name="task_details_go_here">Task details go here</string>
    <string name="date_yyyy_mm_dd">Date: yyyy-mm-dd</string>
    <string name="time_hh_mm">Time: hh:mm</string>
    <string name="category_work">Category: Work</string>
    <string name="no_task_yet">No Task Yet</string>
    <string name="delete_all">Delete all</string>
    <string name="delete_completed">Delete completed</string>
</resources>